2003-09-25  James Willcox  <james@ximian.com>

	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_match_glob):
	* libnautilus-private/nautilus-directory.h:
	* src/file-manager/fm-directory-view.c: (get_pattern_selection),
	(bonobo_menu_select_pattern_callback), (real_merge_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-shell-ui.xml:
 
 	Add a "Edit->Select Pattern" menu entry
 
2003-09-25  Ettore Perazzoli  <ettore@ximian.com>

	* src/file-manager/fm-directory-view.c
	(struct FMDirectoryViewDetails): Removed member
	display_pending_timeout_id.
	(schedule_timeout_display_of_pending_files): Removed.
	(unschedule_timeout_display_of_pending_files): Removed.
	(display_pending_timeout_callback): Removed.
	(unschedule_display_of_pending_files): Don't call
	unschedule_timeout_display_of_pending_files() since it's gone.
	(queue_pending_files): Schedule an idle display only if we are not
	loading, or if all the files have been seen.
	(finish_loading): Don't schedule a timeout display.

2003-09-22  Dave Camp  <dave@ximian.com>

	* configure.in (DISABLE_DEPRECATED_CFLAGS): Removed 
	G_DISABLE_DEPRECATED for now.

2003-09-19  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (permission_change_callback):
	Updated fix for bug #122537.
	
2003-09-19  Alexander Larsson  <alexl@redhat.com>

	* add-include-prefix:
	Fix to work correctly on MacOS X and NetBSD.
	Fixes bug #87835.

2003-09-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_internal):
	Don't assert_not_reached for unsupported URIs when create == FALSE.
	Fixes bug #122265.

2003-09-19  Dennis Cranston <dennis_cranston at yahoo com>

	* libnautilus-private/nautilus-file-operations.c:  HIGify
	the empty trash dialog. Changes strings.

2003-09-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus/nautilus-view-standard-main.c (nautilus_view_instrument_for_failure):