@@ -1,3 +1,11 @@
+2003-09-26  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* src/file-manager/fm-directory-view.c:
+	(select_pattern):
+	
+	HIG fixes (add a missing mnemonic and correct the widget 
+	padding) for the "Select Pattern" dialog.
+	
 2003-09-25  James Willcox  <james@ximian.com>
 
 	* libnautilus-private/nautilus-directory.c:
